src/test/ui/pattern/usefulness/non-exhaustive-pattern-pointer-size-int.stderr
error[E0004]: non-exhaustive patterns: `_` not covered
  --> $DIR/non-exhaustive-pattern-pointer-size-int.rs:4:11
   |
LL |     match 0usize {
   |           ^^^^^^ pattern `_` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `usize`
   = note: for `usize` and `isize`, no assumptions about the maximum value are permitted
   = note: to exhaustively match on either pointer-size integer type, wildcards must be used

error[E0004]: non-exhaustive patterns: `_` not covered
  --> $DIR/non-exhaustive-pattern-pointer-size-int.rs:13:11
   |
LL |     match 0isize {
   |           ^^^^^^ pattern `_` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `isize`
   = note: for `usize` and `isize`, no assumptions about the maximum value are permitted
   = note: to exhaustively match on either pointer-size integer type, wildcards must be used

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0004`.
